temp fix for social network buttons on small screen

--- a/source/stylesheets/nav.css
+++ b/source/stylesheets/nav.css
@@ -110,6 +110,10 @@
     -webkit-transition: all 0.4s ease-out;
   }
 
+  .networks {
+    display: none;
+  }
+
 }
 
 
